# Python-Packaging-Demo

./: MANIFEST.in  README.md  pyproject.toml
doraemonsay/: __main__.py  custom_setup.py  doraemon.py
doraemonsay/resources/: DORAEMON  Dockerfile
